# AgriTrend-DSS

./: .gitignore  README.md  gemini_integration.py  package-lock.json  package.json  setup.js  test_ai_market.py
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  prediction.py
backend/app/core/: config.py  exceptions.py  supabase_client.py
backend/app/data/: region_coordinates.json  soil_data.json
backend/app/middleware/: auth_dependency.py
backend/app/schemas/: auth.py  prediction.py
backend/app/services/: auth_service.py  genai_service.py  location_service.py  ml_service.py  prediction_service.py
dataset/scraping-agritrend/: 00_run_all.py  01_cuaca_openmeteo.py  02_tanah_static.py  03_panen_historis.py  04_merge_final.py  05_rebuild_cuaca_combined.py  06_expand_data.py
dataset/scraping-agritrend/data/final/: AgriTrend_Analisis_Cuaca.ipynb  dataset_info.json  dataset_ml_jabar.csv  (+3 more)
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: SplashScreen.tsx  dashboard-shell.tsx
frontend/src/lib/: api-client.ts  auth-guard.ts  auth.ts
frontend/src/routes/: __root.tsx  analitik.tsx  dashboard.tsx  index.tsx  lahan.tsx  login.tsx  register.tsx  riwayat.tsx
ml_models/: Agri_Trend_DDS.ipynb  README.md  agri_trend_rf_model.joblib  baseline_yield_multi.json  dataset_ml_v2.csv  feature_columns.json  model_features.joblib  predictor.py  train_model.py
(+67 files in other folders)
