[project]
name = "backend"
version = "0.1.0"
description = "Backend - Agri-Trend DSS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.0",
    "joblib>=1.4.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "predictor>=0.1.2",
    "pydantic-settings==2.14.0",
    "scikit-learn>=1.5.0",
    "supabase>=2.18.0",
    "uvicorn[standard]>=0.35.0",
]
